--- a/style.css
+++ b/style.css
@@ -40,3 +40,23 @@ footer {
     text-align: center;
     padding: 10px;
 }
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
+main {
+  margin-top: 100px; /* Adjust depending on header height */
+}
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
+main {
+  margin-top: 100px; /* Adjust depending on header height */
+}
